--- a/web/assets/css/pages/_main.scss
+++ b/web/assets/css/pages/_main.scss
@@ -44,7 +44,7 @@
 }
 
 
-.main-title-area{
+.title-area01{
   margin-bottom: 20px;
   h2{
     font-size: 80px;
@@ -52,6 +52,15 @@
     font-weight: 700;
     text-transform: capitalize;
     text-align: center;
+  }
+  p{
+    font-size: 18px;
+    font-weight: 700;
+    color: #3c3838;
+    padding: 20px 0;
+    span{
+      color: #f66665;
+    }
   }
 }
 
@@ -90,6 +99,61 @@
     line-height: 1.5;
   }
 }
+
+.title-area02{
+  margin: 25px 0;
+  .motion-txt02{
+    p{
+      font-size: 20px;
+      font-weight: 600;
+      color: #FFF;
+      margin: 0 0 0 10px;
+      display: inline-block;
+    }
+    .dot02{
+      display: inline-block;
+      width: 6px;
+      height: 6px;
+      background: #FFF;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      margin-right: 5px;
+    }
+  }
+  h2{
+    font-size: 50px;
+    color: #FFF;
+    font-weight: 700;
+    text-transform: capitalize;
+    padding: 14px 0;
+  }
+  p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+    line-height: 1.5;
+  }
+}
+
+.title-area03{
+  margin-bottom: 20px;
+  h2{
+    font-size: 80px;
+    color: #FFF;
+    font-weight: 700;
+    text-transform: capitalize;
+    text-align: center;
+  }
+  p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+    line-height: 1.5;
+    text-align: center;
+  }
+}
+
 
 // section story behind
 .story-behind{
@@ -276,8 +340,351 @@
   }
 }
 
+// Push Notification
+.push-notification {
+  position: relative;
+  overflow: hidden;
+  padding: 70px 0 200px 0;
+  background-image: -webkit-linear-gradient(120deg, #f45c43, #eb3349);
+  background-image: linear-gradient(120deg, #f45c43, #eb3349);
+  .n-txt {
+    max-width: 700px;
+    strong {
+      font-size: 24px;
+      font-weight: 700;
+      color: #ffffff;
+      padding: 50px 0 20px 0;
+      display: block;
+    }
+  }
+  .notification {
+    width: 650px;
+    .cases {
 
+      .case01 {
+        margin-bottom: 50px;
+        float: left;
+        img {
+          float: left;
+        }
+        p {
+          margin-left: -3px;
+          width: 415px;
+          height: 76px;
+          background: rgba(255, 255, 255, 0.6);
+          float: left;
+          font-size: 14px;
+          color: #481c1a;
+          -webkit-border-radius: 8px;
+          -moz-border-radius: 8px;
+          border-radius: 8px;
+          line-height: 1.5;
+          padding: 18px 30px 0 30px;
+          font-weight: 600;
+          span {
+            font-weight: 700;
+            display: block;
+          }
+        }
+      }
+      .case02 {
+        margin-bottom: 50px;
+        float: right;
+        img {
+          float: left;
+        }
 
+        p {
+          margin-left: -7px;
+          width: 415px;
+          height: 76px;
+          background: rgba(255, 255, 255, 0.6);
+          float: left;
+          font-size: 14px;
+          color: #481c1a;
+          -webkit-border-radius: 8px;
+          -moz-border-radius: 8px;
+          border-radius: 8px;
+          line-height: 1.5;
+          padding: 18px 30px 0 30px;
+          font-weight: 600;
+          span {
+            font-weight: 700;
+            display: block;
+          }
+        }
+      }
+      .case03 {
+        margin-bottom: 50px;
+        float: left;
+        img {
+          float: left;
+        }
+
+        p {
+          margin-left: -6px;
+          width: 415px;
+          height: 76px;
+          background: rgba(255, 255, 255, 0.6);
+          float: left;
+          font-size: 14px;
+          color: #481c1a;
+          -webkit-border-radius: 8px;
+          -moz-border-radius: 8px;
+          border-radius: 8px;
+          line-height: 1.5;
+          padding: 18px 30px 0 30px;
+          font-weight: 600;
+          span {
+            font-weight: 700;
+            display: block;
+          }
+        }
+      }
+
+    }
+
+  }
+  .vibration-img{
+    position: absolute;
+    top: 0;
+    right: -200px;
+  }
+}
+
+// Wireframes
+.wireframes{
+  background: #092742;
+  .wave-img2{
+    position: relative;
+    top: -115px;
+    left: 0;
+  }
+  .wireframes-img{
+    position: relative;
+    height: 1000px;
+    margin-top: 100px;
+
+    .capsulate-message{
+      max-width: 315px;
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      p.title{
+        font-size: 18px;
+        font-weight: 700;
+        color: #fde4ac;
+      }
+      p{
+        font-size: 14px;
+        font-weight: 400;
+        color: #fff;
+      }
+    }
+
+    .profile{
+      max-width: 315px;
+      position: absolute;
+      top: 0;
+      left: 460px;
+
+      p.title{
+        font-size: 18px;
+        font-weight: 700;
+        color: #fde4ac;
+      }
+      p{
+        font-size: 14px;
+        font-weight: 400;
+        color: #fff;
+      }
+    }
+
+    .messages{
+      max-width: 315px;
+      position: absolute;
+      top: 65px;
+      left: 0;
+
+      p.title{
+        font-size: 18px;
+        font-weight: 700;
+        color: #fde4ac;
+      }
+      p{
+        font-size: 14px;
+        font-weight: 400;
+        color: #fff;
+      }
+    }
+
+    .layer-img-btm{
+      position: absolute;
+      top: -70px;
+      left: -175px;
+      z-index: 0;
+      width: 1620px;
+      height: 994px;
+    }
+    .layer-img-top{
+      position: absolute;
+      top: -70px;
+      left: -175px;
+      z-index: 1;
+      width: 1620px;
+      height: 994px;
+    }
+    .icon01{
+      position: absolute;
+      top: 200px;
+      left: 280px;
+    }
+    .icon02{
+      position: absolute;
+      top: 260px;
+      left: 340px;
+    }
+    .icon03{
+      position: absolute;
+      top: 120px;
+      left: 530px;
+    }
+    .icon04{
+      position: absolute;
+      top: 150px;
+      left: 730px;
+    }
+    .icon05{
+      position: absolute;
+      top: 750px;
+      left: 300px;
+    }
+    .icon06{
+      position: absolute;
+      top: 820px;
+      left: 660px;
+    }
+    .icon07{
+      position: absolute;
+      top: 710px;
+      left: 800px;
+    }
+    .icon08{
+      position: absolute;
+      top: 600px;
+      left: 920px;
+    }
+
+  }
+
+}
+
+// Logo Evolution
+.evolution{
+  padding-bottom: 150px;
+  .top-evolution{
+    background: #f4f4f9;
+    height: 450px;
+    padding: 70px 0;
+    .top-container{
+      width: 670px;
+      margin: 0 auto;
+      .visual-clock{
+        position: relative;
+        top: 0;
+        left: -284px;
+        width: 991px;
+        height: 538px;
+        .left-clock{
+          position: absolute;
+          top: 130px;
+          left: 350px;
+        }
+        .right-clock{
+          position: absolute;
+          top: 100px;
+          right: 170px;
+        }
+      }
+    }
+  }
+
+  .visual-card-img{
+    padding-top: 370px;
+    .left-red-box{
+      position: relative;
+      width: 49%;
+      height: 314px;
+      float: left;
+      background-image: -webkit-linear-gradient(120deg, #f45c43, #eb3349);
+      background-image: linear-gradient(120deg, #f45c43, #eb3349);
+      .left-card01{
+        position: absolute;
+        top: 115px;
+        right: 135px;
+      }
+      .left-card02{
+        position: absolute;
+        top: 60px;
+        right: 300px;
+      }
+    }
+    .right-red-box{
+      position: relative;
+      width: 49%;
+      height: 314px;
+      float: right;
+      background-image: -webkit-linear-gradient(120deg,#eb3349,#f45c43);
+      background-image: linear-gradient(120deg,#eb3349,#f45c43);
+      .right-card01{
+        position: absolute;
+        top: 120px;
+        left: 90px;
+      }
+      .right-card02{
+        position: absolute;
+        top: 40px;
+        left: 280px;
+      }
+    }
+
+  }
+
+  .visual-card-txt{
+    padding-top: 120px;
+    .left-ccard-txt01{
+      width: 49%;
+      position: relative;
+      float: left;
+      p{
+        width: 620px;
+        position: absolute;
+        top: 40px;
+        right: 40px;
+        font-size: 16px;
+        font-weight: 400;
+        color: #3c3838;
+      }
+    }
+    .right-ccard-txt01{
+      width: 49%;
+      position: relative;
+      float: right;
+      p{
+        width: 650px;
+        position: absolute;
+        top: 40px;
+        left: 8px;
+        font-size: 16px;
+        font-weight: 400;
+        color: #3c3838;
+      }
+    }
+
+  }
+
+}
 
 
 
