--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1376,4 +1376,7 @@ p {
         font-weight: 400;
         color: #3c3838; }
 
+.general-style {
+  padding: 70px 0; }
+
 /*# sourceMappingURL=style.css.map */
