--- a/web/assets/css/pages/_main.scss
+++ b/web/assets/css/pages/_main.scss
@@ -9,24 +9,24 @@
     padding: 150px 0 70px;
     h2{
       position: relative;
-      bottom: -60px;
+      bottom: -80px;
       img{
-        max-width: 410px;
+        max-width: 600px;
       }
     }
     h3{
-      font-size: 110px;
+      font-size: 160px;
       font-weight: 800;
       color: rgba(255, 255, 255, 0.1);
       text-transform: uppercase;
     }
     p{
-      font-size: 28px;
+      font-size: 40px;
       color: #c41e31;
       text-transform: capitalize;
       font-weight: 400;
       position: relative;
-      top: -65px;
+      top: -95px;
     }
   }
 
@@ -37,8 +37,7 @@
       position: absolute;
       top: -100px;
       left: 50%;
-      margin-left: -150px;
-      max-width: 300px;
+      margin-left: -285px;
     }
   }
 }
@@ -85,7 +84,7 @@
       margin-right: 5px;
     }
   }
-  h2{
+  h3{
     font-size: 50px;
     color: #4c4c4c;
     font-weight: 700;
@@ -121,7 +120,7 @@
       margin-right: 5px;
     }
   }
-  h2{
+  h3{
     font-size: 50px;
     color: #FFF;
     font-weight: 700;
@@ -687,7 +686,568 @@
 }
 // General Style
 .general-style{
-  padding: 70px 0;
+  padding: 70px 0 175px 0;
+  .gs-left{
+    float: left;
+    width: 50%;
+    padding-top: 50px;
+    .w450{
+      margin-top: 100px;
+      max-width: 455px;
+    }
+  }
+  .gs-right{
+    position: relative;
+    top: 70px;
+    right: -50px;
+    .phone-img{
+      position: absolute;
+      top: 0;
+      right: -70px;
+      }
+    .phone-layer-img{
+      position: absolute;
+      top: 0;
+      right: -70px;
+    }
+  }
+
+  .color-palette{
+    clear: both;
+    padding-top: 130px;
+    li{
+      width: 25%;
+      float: left;
+    }
+    .color01{
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      .palette{
+        background: #fede63;
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        -webkit-box-shadow: -3px 13px 21px rgba(254,222,99,.3);
+        -moz-box-shadow:  -3px 13px 21px rgba(254,222,99,.3);
+        box-shadow:  -3px 13px 21px rgba(254,222,99,.3);
+        text-align: center;
+        padding-top: 63.5px;
+        .num{
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0;
+        }
+      }
+      .move-img{
+        position: absolute;
+        top: -40px;
+        left: -40px;
+      }
+    }
+
+    .color02{
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      .palette{
+        background: #f88667;
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        -webkit-box-shadow: -3px 13px 21px rgba(248, 134, 103, 0.3);
+        -moz-box-shadow:  -3px 13px 21px rgba(248, 134, 103, 0.3);
+        box-shadow:  -3px 13px 21px rgba(248, 134, 103, 0.3);
+        text-align: center;
+        padding-top: 63.5px;
+        .num{
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0;
+        }
+      }
+      .move-img{
+        position: absolute;
+        top: -40px;
+        left: -40px;
+      }
+    }
+
+    .color03{
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      .palette{
+        background: #f4483c;
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        -webkit-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.3);
+        -moz-box-shadow:  -3px 13px 21px rgba(244, 72, 60, 0.3);
+        box-shadow:  -3px 13px 21px rgba(244, 72, 60, 0.3);
+        text-align: center;
+        padding-top: 63.5px;
+        .num{
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0;
+        }
+      }
+      .move-img{
+        position: absolute;
+        top: -40px;
+        left: -40px;
+      }
+    }
+
+    .color04{
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      .palette{
+        background-image: -webkit-linear-gradient(120deg,#eb3349, #fede63);
+        background-image: linear-gradient(120deg,#eb3349, #fede63);
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        text-align: center;
+        padding-top: 63.5px;
+        .num{
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0;
+        }
+      }
+      .move-img{
+        position: absolute;
+        top: -40px;
+        left: -40px;
+      }
+    }
+
+  }
+
 }
+
+// Technologies
+.technologies {
+  background: #f6f6f6;
+  padding-bottom: 60px;
+  .wave-img3 {
+    position: relative;
+    top: -104px;
+    left: 0;
+  }
+  h3 {
+    font-size: 160px;
+    font-weight: 800;
+    color: #ebebeb;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 100px;
+  }
+  .layer-text-box {
+    width: 750px;
+    margin: 0 auto;
+    position: relative;
+    top: -130px;
+    .white-box01 {
+      width: 470px;
+      height: 245px;
+      background: #ffffff;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      -webkit-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      font-size: 16px;
+      font-weight: 400;
+      color: #8088a2;
+      float: left;
+      position: relative;
+      .white-small-box01 {
+        border: 1px solid #e9e9e9;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        padding: 15px 30px 13px 30px;
+        display: inline-block;
+        line-height: 1.5;
+        width: 140px;
+        position: absolute;
+        top: 80px;
+        left: 40px;
+        span {
+          font-weight: 700;
+          color: #263238;
+          display: block;
+        }
+      }
+      .white-small-box02 {
+        border: 1px solid #e9e9e9;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        padding: 15px 30px 13px 30px;
+        display: inline-block;
+        line-height: 1.5;
+        width: 140px;
+        position: absolute;
+        top: 50px;
+        right: 40px;
+        span {
+          font-weight: 700;
+          color: #263238;
+          display: block;
+        }
+      }
+      .white-small-box03 {
+        border: 1px solid #e9e9e9;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        padding: 15px 30px 13px 30px;
+        display: inline-block;
+        line-height: 1.5;
+        width: 140px;
+        position: absolute;
+        top: 140px;
+        right: 40px;
+        span {
+          font-weight: 700;
+          color: #263238;
+          display: block;
+        }
+      }
+    }
+    .white-box02 {
+      width: 222px;
+      height: 180px;
+      background: #ffffff;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      -webkit-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      font-size: 16px;
+      font-weight: 400;
+      color: #8088a2;
+      float: right;
+      position: relative;
+      top: 65px;
+      .white-small-box01 {
+        padding: 30px;
+        display: inline-block;
+        line-height: 1.5;
+        span {
+          font-weight: 700;
+          color: #263238;
+          display: block;
+        }
+      }
+
+    }
+  }
+
+  .red-box-layer{
+    position: relative;
+    top: -260px;
+    width: 750px;
+    margin: 0 auto;
+    font-size: 16px;
+    font-weight: 700;
+    color: #FFF;
+    .red-box{
+      background: #f4483c;
+      -webkit-border-radius: 8px;
+      -moz-border-radius: 8px;
+      border-radius: 8px;
+      -webkit-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.1);
+      -moz-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.1);
+      box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.1);
+      text-align: center;
+      padding: 10px 20px 8px 20px;
+      display: inline-block;
+      line-height: 1.5;
+      min-width: 140px;
+    }
+    .red-small-box01{
+      position: absolute;
+      top: 0;
+      left: 20px;
+    }
+    .red-small-box02{
+      position: absolute;
+      top: 0;
+      left: 350px;
+    }
+    .red-small-box03{
+      position: absolute;
+      top: 0;
+      right: 20px;
+    }
+    .red-small-box04{
+      position: absolute;
+      top: 110px;
+      left: 160px;
+    }
+    .red-small-box05{
+      position: absolute;
+      top: 170px;
+      right: 40px;
+    }
+    .red-small-box06{
+      position: absolute;
+      left: 20px;
+      top: 430px;
+    }
+    .red-small-box07{
+      position: absolute;
+      left: 330px;
+      top: 430px;
+    }
+
+  }
+
+
+
+}
+
+//Features
+.features{
+  background: url('https://gbksoft.com/img/cases/timewilltell/features-bg.png') 0 0 no-repeat;
+  position: relative;
+  z-index: 1;
+  padding: 100px 0 200px 0;
+  .features-items{
+    li{
+      float: left;
+      width: 25%;
+      height: 232px;
+      padding: 0 15px;
+      .item{
+        width: 100%;
+        height: 216px;
+        background: #FFF;
+        -webkit-border-radius: 14px;
+        -moz-border-radius: 14px;
+        border-radius: 14px;
+        text-align: center;
+        line-height: 1.5;
+        position: relative;
+        span{
+          display: block;
+          padding: 25px 0;
+        }
+        p{
+          font-size: 16px;
+          font-weight: 700;
+          color: #0a0a0a;
+        }
+        p.bg-layer{
+          width: 226px;
+          height: 50px;
+          background: rgba(255, 255, 255, 0.5);
+          -webkit-border-radius: 14px;
+          -moz-border-radius: 14px;
+          border-radius: 14px;
+          position: absolute;
+          bottom: -16px;
+          left: 50%;
+          margin-left: -113px;
+        }
+      }
+    }
+  }
+}
+
+// Feedback
+.feedback{
+  margin-top: -80px;
+  padding-top: 180px;
+  background-image: -webkit-linear-gradient(120deg,#eb3349,#f45c43);
+  background-image: linear-gradient(-30deg,#eb3349,#f45c43);
+  .feedback-txt-box{
+    height: 108px;
+    position: relative;
+    margin: 50px 0 20px 0;
+    .quote-start{
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .quote-end{
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+    .feedback-txt{
+      width: 850px;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #ffffff;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      margin-left: -425px;
+    }
+  }
+  .feedback-vs{
+    margin-top: -100px;
+  }
+}
+
+// Idea
+.idea{
+  background: #f6f6f6;
+  padding: 150px 0;
+  .btn-area{
+    text-align: center;
+    .btn01{
+      color: #f4483c;
+      font-weight: 700;
+      line-height: 1.5;
+      font-size: 21px;
+      padding-top: 20px;
+      border: 1px solid #f4483c;
+      -webkit-border-radius: 7px;
+      -moz-border-radius: 7px;
+      border-radius: 7px;
+      background: #FFF;
+      width: 240px;
+      height: 72px;
+      display: inline-block;
+      margin-right: 38px;
+      -webkit-transition: all 0.4s;
+      -moz-transition: all 0.4s;
+      -ms-transition: all 0.4s;
+      -o-transition: all 0.4s;
+      transition: all 0.4s;
+      &:hover{
+        color: #FFF;
+        border: 1px solid #f4483c;
+        background: #f4483c;
+      }
+    }
+    .btn02{
+      color: #FFF;
+      font-weight: 700;
+      line-height: 1.5;
+      font-size: 21px;
+      padding-top: 20px;
+      border: 1px solid #f4483c;
+      -webkit-border-radius: 7px;
+      -moz-border-radius: 7px;
+      border-radius: 7px;
+      background: #f4483c;
+      width: 240px;
+      height: 72px;
+      display: inline-block;
+      -webkit-transition: all 0.4s;
+      -moz-transition: all 0.4s;
+      -ms-transition: all 0.4s;
+      -o-transition: all 0.4s;
+      transition: all 0.4s;
+      &:hover{
+        color: #f4483c;
+        border: 1px solid #f4483c;
+        background: #FFF;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
+
 
 
