--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -854,21 +854,21 @@ p {
     padding: 150px 0 70px; }
     .visual .text h2 {
       position: relative;
-      bottom: -60px; }
+      bottom: -80px; }
       .visual .text h2 img {
-        max-width: 410px; }
+        max-width: 600px; }
     .visual .text h3 {
-      font-size: 110px;
+      font-size: 160px;
       font-weight: 800;
       color: rgba(255, 255, 255, 0.1);
       text-transform: uppercase; }
     .visual .text p {
-      font-size: 28px;
+      font-size: 40px;
       color: #c41e31;
       text-transform: capitalize;
       font-weight: 400;
       position: relative;
-      top: -65px; }
+      top: -95px; }
   .visual .vs-bg {
     position: relative;
     top: 60px; }
@@ -876,8 +876,7 @@ p {
       position: absolute;
       top: -100px;
       left: 50%;
-      margin-left: -150px;
-      max-width: 300px; }
+      margin-left: -285px; }
 
 .title-area01 {
   margin-bottom: 20px; }
@@ -912,7 +911,7 @@ p {
     -moz-border-radius: 50%;
     border-radius: 50%;
     margin-right: 5px; }
-  .title-area h2 {
+  .title-area h3 {
     font-size: 50px;
     color: #4c4c4c;
     font-weight: 700;
@@ -941,7 +940,7 @@ p {
     -moz-border-radius: 50%;
     border-radius: 50%;
     margin-right: 5px; }
-  .title-area02 h2 {
+  .title-area02 h3 {
     font-size: 50px;
     color: #FFF;
     font-weight: 700;
@@ -1377,6 +1376,477 @@ p {
         color: #3c3838; }
 
 .general-style {
-  padding: 70px 0; }
+  padding: 70px 0 175px 0; }
+  .general-style .gs-left {
+    float: left;
+    width: 50%;
+    padding-top: 50px; }
+    .general-style .gs-left .w450 {
+      margin-top: 100px;
+      max-width: 455px; }
+  .general-style .gs-right {
+    position: relative;
+    top: 70px;
+    right: -50px; }
+    .general-style .gs-right .phone-img {
+      position: absolute;
+      top: 0;
+      right: -70px; }
+    .general-style .gs-right .phone-layer-img {
+      position: absolute;
+      top: 0;
+      right: -70px; }
+  .general-style .color-palette {
+    clear: both;
+    padding-top: 130px; }
+    .general-style .color-palette li {
+      width: 25%;
+      float: left; }
+    .general-style .color-palette .color01 {
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%; }
+      .general-style .color-palette .color01 .palette {
+        background: #fede63;
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        -webkit-box-shadow: -3px 13px 21px rgba(254, 222, 99, 0.3);
+        -moz-box-shadow: -3px 13px 21px rgba(254, 222, 99, 0.3);
+        box-shadow: -3px 13px 21px rgba(254, 222, 99, 0.3);
+        text-align: center;
+        padding-top: 63.5px; }
+        .general-style .color-palette .color01 .palette .num {
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0; }
+      .general-style .color-palette .color01 .move-img {
+        position: absolute;
+        top: -40px;
+        left: -40px; }
+    .general-style .color-palette .color02 {
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%; }
+      .general-style .color-palette .color02 .palette {
+        background: #f88667;
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        -webkit-box-shadow: -3px 13px 21px rgba(248, 134, 103, 0.3);
+        -moz-box-shadow: -3px 13px 21px rgba(248, 134, 103, 0.3);
+        box-shadow: -3px 13px 21px rgba(248, 134, 103, 0.3);
+        text-align: center;
+        padding-top: 63.5px; }
+        .general-style .color-palette .color02 .palette .num {
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0; }
+      .general-style .color-palette .color02 .move-img {
+        position: absolute;
+        top: -40px;
+        left: -40px; }
+    .general-style .color-palette .color03 {
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%; }
+      .general-style .color-palette .color03 .palette {
+        background: #f4483c;
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        -webkit-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.3);
+        -moz-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.3);
+        box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.3);
+        text-align: center;
+        padding-top: 63.5px; }
+        .general-style .color-palette .color03 .palette .num {
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0; }
+      .general-style .color-palette .color03 .move-img {
+        position: absolute;
+        top: -40px;
+        left: -40px; }
+    .general-style .color-palette .color04 {
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border: 2px solid #c9c9c9;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%; }
+      .general-style .color-palette .color04 .palette {
+        background-image: -webkit-linear-gradient(120deg, #eb3349, #fede63);
+        background-image: linear-gradient(120deg, #eb3349, #fede63);
+        width: 150px;
+        height: 150px;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        text-align: center;
+        padding-top: 63.5px; }
+        .general-style .color-palette .color04 .palette .num {
+          background: #ffffff;
+          width: 50px;
+          height: 50px;
+          color: #000;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          font-size: 32px;
+          font-weight: 700;
+          color: #4c4c4c;
+          line-height: 1.85;
+          position: absolute;
+          top: 100px;
+          right: 0; }
+      .general-style .color-palette .color04 .move-img {
+        position: absolute;
+        top: -40px;
+        left: -40px; }
+
+.technologies {
+  background: #f6f6f6;
+  padding-bottom: 60px; }
+  .technologies .wave-img3 {
+    position: relative;
+    top: -104px;
+    left: 0; }
+  .technologies h3 {
+    font-size: 160px;
+    font-weight: 800;
+    color: #ebebeb;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 100px; }
+  .technologies .layer-text-box {
+    width: 750px;
+    margin: 0 auto;
+    position: relative;
+    top: -130px; }
+    .technologies .layer-text-box .white-box01 {
+      width: 470px;
+      height: 245px;
+      background: #ffffff;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      -webkit-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      font-size: 16px;
+      font-weight: 400;
+      color: #8088a2;
+      float: left;
+      position: relative; }
+      .technologies .layer-text-box .white-box01 .white-small-box01 {
+        border: 1px solid #e9e9e9;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        padding: 15px 30px 13px 30px;
+        display: inline-block;
+        line-height: 1.5;
+        width: 140px;
+        position: absolute;
+        top: 80px;
+        left: 40px; }
+        .technologies .layer-text-box .white-box01 .white-small-box01 span {
+          font-weight: 700;
+          color: #263238;
+          display: block; }
+      .technologies .layer-text-box .white-box01 .white-small-box02 {
+        border: 1px solid #e9e9e9;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        padding: 15px 30px 13px 30px;
+        display: inline-block;
+        line-height: 1.5;
+        width: 140px;
+        position: absolute;
+        top: 50px;
+        right: 40px; }
+        .technologies .layer-text-box .white-box01 .white-small-box02 span {
+          font-weight: 700;
+          color: #263238;
+          display: block; }
+      .technologies .layer-text-box .white-box01 .white-small-box03 {
+        border: 1px solid #e9e9e9;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        padding: 15px 30px 13px 30px;
+        display: inline-block;
+        line-height: 1.5;
+        width: 140px;
+        position: absolute;
+        top: 140px;
+        right: 40px; }
+        .technologies .layer-text-box .white-box01 .white-small-box03 span {
+          font-weight: 700;
+          color: #263238;
+          display: block; }
+    .technologies .layer-text-box .white-box02 {
+      width: 222px;
+      height: 180px;
+      background: #ffffff;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      -webkit-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      -moz-box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      box-shadow: -3px 13px 21px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      font-size: 16px;
+      font-weight: 400;
+      color: #8088a2;
+      float: right;
+      position: relative;
+      top: 65px; }
+      .technologies .layer-text-box .white-box02 .white-small-box01 {
+        padding: 30px;
+        display: inline-block;
+        line-height: 1.5; }
+        .technologies .layer-text-box .white-box02 .white-small-box01 span {
+          font-weight: 700;
+          color: #263238;
+          display: block; }
+  .technologies .red-box-layer {
+    position: relative;
+    top: -260px;
+    width: 750px;
+    margin: 0 auto;
+    font-size: 16px;
+    font-weight: 700;
+    color: #FFF; }
+    .technologies .red-box-layer .red-box {
+      background: #f4483c;
+      -webkit-border-radius: 8px;
+      -moz-border-radius: 8px;
+      border-radius: 8px;
+      -webkit-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.1);
+      -moz-box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.1);
+      box-shadow: -3px 13px 21px rgba(244, 72, 60, 0.1);
+      text-align: center;
+      padding: 10px 20px 8px 20px;
+      display: inline-block;
+      line-height: 1.5;
+      min-width: 140px; }
+    .technologies .red-box-layer .red-small-box01 {
+      position: absolute;
+      top: 0;
+      left: 20px; }
+    .technologies .red-box-layer .red-small-box02 {
+      position: absolute;
+      top: 0;
+      left: 350px; }
+    .technologies .red-box-layer .red-small-box03 {
+      position: absolute;
+      top: 0;
+      right: 20px; }
+    .technologies .red-box-layer .red-small-box04 {
+      position: absolute;
+      top: 110px;
+      left: 160px; }
+    .technologies .red-box-layer .red-small-box05 {
+      position: absolute;
+      top: 170px;
+      right: 40px; }
+    .technologies .red-box-layer .red-small-box06 {
+      position: absolute;
+      left: 20px;
+      top: 430px; }
+    .technologies .red-box-layer .red-small-box07 {
+      position: absolute;
+      left: 330px;
+      top: 430px; }
+
+.features {
+  background: url("https://gbksoft.com/img/cases/timewilltell/features-bg.png") 0 0 no-repeat;
+  position: relative;
+  z-index: 1;
+  padding: 100px 0 200px 0; }
+  .features .features-items li {
+    float: left;
+    width: 25%;
+    height: 232px;
+    padding: 0 15px; }
+    .features .features-items li .item {
+      width: 100%;
+      height: 216px;
+      background: #FFF;
+      -webkit-border-radius: 14px;
+      -moz-border-radius: 14px;
+      border-radius: 14px;
+      text-align: center;
+      line-height: 1.5;
+      position: relative; }
+      .features .features-items li .item span {
+        display: block;
+        padding: 25px 0; }
+      .features .features-items li .item p {
+        font-size: 16px;
+        font-weight: 700;
+        color: #0a0a0a; }
+      .features .features-items li .item p.bg-layer {
+        width: 226px;
+        height: 50px;
+        background: rgba(255, 255, 255, 0.5);
+        -webkit-border-radius: 14px;
+        -moz-border-radius: 14px;
+        border-radius: 14px;
+        position: absolute;
+        bottom: -16px;
+        left: 50%;
+        margin-left: -113px; }
+
+.feedback {
+  margin-top: -80px;
+  padding-top: 180px;
+  background-image: -webkit-linear-gradient(120deg, #eb3349, #f45c43);
+  background-image: linear-gradient(-30deg, #eb3349, #f45c43); }
+  .feedback .feedback-txt-box {
+    height: 108px;
+    position: relative;
+    margin: 50px 0 20px 0; }
+    .feedback .feedback-txt-box .quote-start {
+      position: absolute;
+      top: 0;
+      left: 0; }
+    .feedback .feedback-txt-box .quote-end {
+      position: absolute;
+      top: 0;
+      right: 0; }
+    .feedback .feedback-txt-box .feedback-txt {
+      width: 850px;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #ffffff;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      margin-left: -425px; }
+  .feedback .feedback-vs {
+    margin-top: -100px; }
+
+.idea {
+  background: #f6f6f6;
+  padding: 150px 0; }
+  .idea .btn-area {
+    text-align: center; }
+    .idea .btn-area .btn01 {
+      color: #f4483c;
+      font-weight: 700;
+      line-height: 1.5;
+      font-size: 21px;
+      padding-top: 20px;
+      border: 1px solid #f4483c;
+      -webkit-border-radius: 7px;
+      -moz-border-radius: 7px;
+      border-radius: 7px;
+      background: #FFF;
+      width: 240px;
+      height: 72px;
+      display: inline-block;
+      margin-right: 38px;
+      -webkit-transition: all 0.4s;
+      -moz-transition: all 0.4s;
+      -ms-transition: all 0.4s;
+      -o-transition: all 0.4s;
+      transition: all 0.4s; }
+      .idea .btn-area .btn01:hover {
+        color: #FFF;
+        border: 1px solid #f4483c;
+        background: #f4483c; }
+    .idea .btn-area .btn02 {
+      color: #FFF;
+      font-weight: 700;
+      line-height: 1.5;
+      font-size: 21px;
+      padding-top: 20px;
+      border: 1px solid #f4483c;
+      -webkit-border-radius: 7px;
+      -moz-border-radius: 7px;
+      border-radius: 7px;
+      background: #f4483c;
+      width: 240px;
+      height: 72px;
+      display: inline-block;
+      -webkit-transition: all 0.4s;
+      -moz-transition: all 0.4s;
+      -ms-transition: all 0.4s;
+      -o-transition: all 0.4s;
+      transition: all 0.4s; }
+      .idea .btn-area .btn02:hover {
+        color: #f4483c;
+        border: 1px solid #f4483c;
+        background: #FFF; }
 
 /*# sourceMappingURL=style.css.map */
